--- a/railway.toml
+++ b/railway.toml
@@ -3,4 +3,4 @@ builder = "nixpacks"
 buildCommand = "cd backend && pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cd backend && gunicorn api:app"
+startCommand = "cd backend && gunicorn api:app --bind 0.0.0.0:$PORT"
